# Projeto-engLinguagem

./: .gitignore  GRAMMAR_PLAYGROUND_README.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  anotacoes.md  app.py  gramatica.txt  main.py  requirements.txt  run.py  test_grammar_playground.py  test_parser_output.py  test_phase1.py
core/: __init__.py  derivation_tree.py  generator.py  grammar.py  lark_parser.py  ll1_analyzer.py  loader.py  parser_LL1.py  parser_generator.py  parser_logic.py  refactor.py  utils.py  visitor.py
deteta_vuln/: analyser.py  ast_builder.py  ast_nodes.py  cfg_maker.py  exemplo.ipl  grammar.lark  grammar_analyzer.py  grammar_language.lark  lexer.py  main.py  parse_tree_builder.py  relatorio.html  rules.json  run.py  scope.py  semantic_analyzer.py
examples/: agenda.txt  pascal.txt  pascal_manual.py
grammars/: pascal_subset.txt
pdfs/: pyproject.toml
templates/: index.html
tests/: test_conflict_categorization.py  test_first_follow_safety.py  test_list_pattern_fix.py  test_ui_requires_ll.py
web/: __init__.py  app.py
web/static/css/: style.css
web/static/js/: script.js
web/templates/: index.html
