[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grammar_playground"
version = "0.1.0"
description = "Grammar Playground - LL(1) Grammar Analysis Tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Grammar Playground Team"}
]
dependencies = [
    "flask>=2.0.0",
    "lark>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
grammar-playground = "web.app:main"

[tool.setuptools.packages.find]
include = ["core*", "web*", "semantic*"]
